feat: add parallelism parameters (#5)